fixing background pic on mobile

--- a/countries.css
+++ b/countries.css
@@ -62,8 +62,8 @@ img {
 .hero {
     background-image: url(canada/torontoHeader.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-size: 100vmax 100vmax;
+    background-position: center center;
     background-attachment: fixed;
     height: 100vh;
     width: 100vw;
